--- a/docs/epocs/E001DB.md
+++ b/docs/epocs/E001DB.md
@@ -1,13 +1,9 @@
 ---
-title: Zone à Régime Restrictif
-img: /images/accueil-zrr.png
 template: epoc-theme/epoc.html
+title: Zone à Régime Restrictif
+description: Formation ePoc des nouveaux arrivants Inria en Zone à Régime Restrictif.
+img: /images/accueil-zrr.png
+private: true
+apple_link: https://apps.apple.com/us/app/epoc-zrr/id1596921676
+google_link: https://play.google.com/store/apps/details?id=fr.inria.epoc.zrr
 ---
-
-
-<p class="p-large mb-8">Formation ePoc des nouveaux arrivants Inria en Zone à Régime Restrictif.</p>
-<p class="p-large mb-8 p-small">
-    <i class="fa fa-lock"></i></a> Cette formation est réservée au personnel Inria.
-</p>
-<a class="btn-solid-lg" href="https://apps.apple.com/us/app/epoc-zrr/id1596921676"><i class="fab fa-apple"></i>Télécharger</a>
-<a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=fr.inria.epoc.zrr"><i class="fab fa-google-play"></i>Télécharger</a>
