--- a/docs/epocs/E003VR.md
+++ b/docs/epocs/E003VR.md
@@ -1,11 +1,8 @@
 ---
 title: Internet des objets et vie privée (Bientôt)
-img: /images/accueil-zrr.png
+description: Formation ePoc dédiée à la question du respect de la vie privée dans le domaine de la maison intelligente.</p>
+img: /images/accueil-iot.png
 template: epoc-theme/epoc.html
 ---
 
 
-<p class="p-large mb-8">Formation ePoc dédiée à la question du respect de la vie privée dans le domaine de la maison intelligente.</p>
-
-<a class="btn-solid-lg" href="https://testflight.apple.com/join/Qm1AvfH6"><i class="fab fa-apple"></i>Télécharger</a>
-<a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=fr.inria.epoc"><i class="fab fa-google-play"></i>Télécharger</a>
