--- a/docs/epocs/E006PE.md
+++ b/docs/epocs/E006PE.md
@@ -1,11 +1,10 @@
 ---
-title: B.A.-BA des data
-img: /images/accueil-zrr.png
+title: B.A.-BA des data (Bientôt)
+description: Ce parcours se destine à toutes celles et ceux qui s'interrogent sur le fonctionnement de l'informatique. Dans cet ePoc on vous propose de comprendre quelques fondamentaux sur les données.
+img: /images/accueil-data.png
 template: epoc-theme/epoc.html
 ---
 
 
-<p class="p-large mb-8">Formation sur les bases des data.</p>
 
-<a class="btn-solid-lg" href="https://testflight.apple.com/join/Qm1AvfH6"><i class="fab fa-apple"></i>Télécharger</a>
-<a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=fr.inria.epoc"><i class="fab fa-google-play"></i>Télécharger</a>
+
