Remove coming soon label for epoc data

--- a/docs/epocs/E006PE.md
+++ b/docs/epocs/E006PE.md
@@ -1,5 +1,5 @@
 ---
-title: B.A.-BA des data (Bientôt)
+title: B.A.-BA des data
 description: Ce parcours se destine à toutes celles et ceux qui s'interrogent sur le fonctionnement de l'informatique. Dans cet ePoc on vous propose de comprendre quelques fondamentaux sur les données.
 img: /images/accueil-data.png
 template: epoc-theme/epoc.html
