Update epocs status

--- a/docs/epocs/E002VR.md
+++ b/docs/epocs/E002VR.md
@@ -1,5 +1,5 @@
 ---
-title: Smartphone et vie privée (Bientôt)
+title: Smartphone et vie privée
 description: Formation ePoc dédiée à la question du respect de la vie privée lorsque l'on utilise nos assistants personnels, smartphone ou tablette.
 img: /images/accueil-vp.png
 template: epoc-theme/epoc.html
