--- a/docs/epocs/E003VR.md
+++ b/docs/epocs/E003VR.md
@@ -1,5 +1,5 @@
 ---
-title: Internet des objets et vie privée (Bientôt)
+title: Internet des objets et vie privée
 description: Formation ePoc dédiée à la question du respect de la vie privée dans le domaine de la maison intelligente.</p>
 img: /images/accueil-iot.png
 template: epoc-theme/epoc.html
