--- a/docs/epocs/E007MM.md
+++ b/docs/epocs/E007MM.md
@@ -1,5 +1,5 @@
 ---
-title: Le smartphone et la planète (Bientôt)
+title: Le smartphone et la planète
 description: Une formation courte sur mobile pour comprendre les impacts environnementaux du smartphone.
 img: /images/accueil-impactnum.png
 template: epoc-theme/epoc.html
