Add section about current epocs available

--- a/docs/epocs/E002VR.md
+++ b/docs/epocs/E002VR.md
@@ -1,6 +1,8 @@
 ---
 title: Smartphone et vie privée
 description: Formation ePoc dédiée à la question du respect de la vie privée lorsque l'on utilise nos assistants personnels, smartphone ou tablette.
+short: A propos du respect de la vie privée sur nos smartphone ou tablette.
 img: /images/accueil-vp.png
+thumb: /images/thumb-vp.png
 template: epoc-theme/epoc.html
 ---
