--- a/docs/epocs/E003VR.md
+++ b/docs/epocs/E003VR.md
@@ -1,7 +1,9 @@
 ---
 title: Internet des objets et vie privée
 description: Formation ePoc dédiée à la question du respect de la vie privée dans le domaine de la maison intelligente.</p>
+short: Sur la question de la vie privée dans le domaine de la maison intelligente.
 img: /images/accueil-iot.png
+thumb: /images/thumb-iot.png
 template: epoc-theme/epoc.html
 ---
 
