--- a/docs/epocs/E006PE.md
+++ b/docs/epocs/E006PE.md
@@ -1,7 +1,9 @@
 ---
 title: B.A.-BA des data
 description: Ce parcours se destine à toutes celles et ceux qui s'interrogent sur le fonctionnement de l'informatique. Dans cet ePoc on vous propose de comprendre quelques fondamentaux sur les données.
+short: Comprendre quelques fondamentaux de l'informatique et des données.
 img: /images/accueil-data.png
+thumb: /images/thumb-data.png
 template: epoc-theme/epoc.html
 ---
 
