--- a/docs/epocs/E007MM.md
+++ b/docs/epocs/E007MM.md
@@ -1,7 +1,9 @@
 ---
 title: Le smartphone et la planète
 description: Une formation courte sur mobile pour comprendre les impacts environnementaux du smartphone.
+short: Comprendre les impacts environnementaux du smartphone.
 img: /images/accueil-impactnum.png
+thumb: /images/thumb-impactnum.png
 template: epoc-theme/epoc.html
 ---
 
