WIP : Migrating to shadcn nuxt content

--- a/content/epocs/E001DB.md
+++ b/content/epocs/E001DB.md
@@ -2,7 +2,9 @@
 template: epoc-theme/epoc.html
 title: Zone à Régime Restrictif
 description: Formation ePoc des nouveaux arrivants Inria en Zone à Régime Restrictif.
+short: Formation ePoc des nouveaux arrivants Inria en Zone à Régime Restrictif.
 img: /images/accueil-zrr.png
+thumb: /images/thumb-zrr.png
 private: true
 apple_link: https://apps.apple.com/us/app/epoc-zrr/id1596921676
 google_link: https://play.google.com/store/apps/details?id=fr.inria.epoc.zrr
