--- a/content/epocs/E003VR.md
+++ b/content/epocs/E003VR.md
@@ -1,6 +1,6 @@
 ---
 title: Internet des objets et vie privée
-description: Formation ePoc dédiée à la question du respect de la vie privée dans le domaine de la maison intelligente.</p>
+description: Formation ePoc dédiée à la question du respect de la vie privée dans le domaine de la maison intelligente.
 short: Sur la question de la vie privée dans le domaine de la maison intelligente.
 img: /images/accueil-iot.png
 thumb: /images/thumb-iot.png
