WIP : Styling epocs listing and details

--- a/content/epocs/E002VR.md
+++ b/content/epocs/E002VR.md
@@ -4,5 +4,48 @@ description: Formation ePoc dédiée à la question du respect de la vie privée
 short: A propos du respect de la vie privée sur nos smartphone ou tablette.
 img: /images/accueil-vp.png
 thumb: /images/thumb-vp.png
-template: epoc-theme/epoc.html
+fullpage: true
 ---
+
+::hero-alt
+---
+actions:
+- name: Découvrir sur Android
+  to: {{$data.google_link}}
+  leftIcon: 'cib:google-play'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+- name: Découvrir sur iOS
+  to: {{$data.apple_link}}
+  leftIcon: 'cib:apple'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+---
+
+#title
+{{$doc.title}}
+
+#description
+{{$doc.description}}
+
+#right
+![ePoc Mobile App screenshots]({{$doc.img}})  
+::
+
+::card
+#title
+Inscrivez-vous à notre Newsletter 💌
+
+#description
+Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+
+#content
+::newsletter-box
+---
+placeholder: Entrez votre email
+---
+#button
+S'abonner
+::
+::
+
