--- a/content/epocs/E006PE.md
+++ b/content/epocs/E006PE.md
@@ -4,8 +4,50 @@ description: Ce parcours se destine à toutes celles et ceux qui s'interrogent s
 short: Comprendre quelques fondamentaux de l'informatique et des données.
 img: /images/accueil-data.png
 thumb: /images/thumb-data.png
-template: epoc-theme/epoc.html
+fullpage: true
 ---
+
+::hero-alt
+---
+actions:
+- name: Découvrir sur Android
+  to: {{$data.google_link}}
+  leftIcon: 'cib:google-play'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+- name: Découvrir sur iOS
+  to: {{$data.apple_link}}
+  leftIcon: 'cib:apple'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank 
+---
+
+#title
+{{$doc.title}}
+
+#description
+{{$doc.description}} 
+
+#right
+![ePoc Mobile App screenshots]({{$doc.img}})  
+::
+
+::card
+#title
+Inscrivez-vous à notre Newsletter 💌
+
+#description
+Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+
+#content
+::newsletter-box
+---
+placeholder: Entrez votre email
+---
+#button
+S'abonner
+::
+::
 
 
 
