--- a/content/epocs/E007MM.md
+++ b/content/epocs/E007MM.md
@@ -4,8 +4,52 @@ description: Une formation courte sur mobile pour comprendre les impacts environ
 short: Comprendre les impacts environnementaux du smartphone.
 img: /images/accueil-impactnum.png
 thumb: /images/thumb-impactnum.png
-template: epoc-theme/epoc.html
+fullpage: true
 ---
+
+::hero-alt
+---
+actions:
+- name: Découvrir sur Android
+  to: {{$data.google_link}}
+  leftIcon: 'cib:google-play'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+- name: Découvrir sur iOS
+  to: {{$data.apple_link}}
+  leftIcon: 'cib:apple'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+---
+
+#title
+{{$doc.title}}
+
+#description
+{{$doc.description}}
+
+#right
+![ePoc Mobile App screenshots]({{$doc.img}})  
+::
+
+::card
+#title
+Inscrivez-vous à notre Newsletter 💌
+
+#description
+Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+
+#content
+::newsletter-box
+---
+placeholder: Entrez votre email
+---
+#button
+S'abonner
+::
+::
+
+
 
 
 
