--- a/content/epocs/E009LL.md
+++ b/content/epocs/E009LL.md
@@ -4,8 +4,50 @@ description: "Ce parcours découverte s'adresse à toutes celles et tous ceux qu
 short: "Les principes de l'intelligence artificielle (IA) par rapport à l'intelligence biologique"
 img: /images/accueil-ia.png
 thumb: /images/thumb-ia.png
-template: epoc-theme/epoc.html
+fullpage: true
 ---
+
+::hero-alt
+---
+actions:
+- name: Découvrir sur Android
+  to: {{$data.google_link}}
+  leftIcon: 'cib:google-play'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+- name: Découvrir sur iOS
+  to: {{$data.apple_link}}
+  leftIcon: 'cib:apple'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+---
+
+#title
+{{$doc.title}}
+
+#description
+{{$doc.description}}
+
+#right
+![ePoc Mobile App screenshots]({{$doc.img}})  
+::
+
+::card
+#title
+Inscrivez-vous à notre Newsletter 💌
+
+#description
+Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+
+#content
+::newsletter-box
+---
+placeholder: Entrez votre email
+---
+#button
+S'abonner
+::
+::
 
 
 
