--- a/content/epocs/E012MC.md
+++ b/content/epocs/E012MC.md
@@ -5,8 +5,74 @@ short: "Découvrez comment créer votre première formation mobile learning, cou
 img: /images/accueil-E012MC.png
 thumb: /images/thumb-E012MC.png
 qrcode: /images/qr-E012MC.png
-template: epoc-theme/epoc.html
+fullpage: true
 ---
+
+::hero-alt
+---
+actions:
+- name: Découvrir sur Android
+  to: {{$data.google_link}}
+  leftIcon: 'cib:google-play'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+- name: Découvrir sur iOS
+  to: {{$data.apple_link}}
+  leftIcon: 'cib:apple'
+  rightIcon: 'lucide:arrow-up-right'
+  target: _blank
+---
+
+#title
+{{$doc.title}}
+
+#description
+{{$doc.description}}
+
+#right
+![ePoc Mobile App screenshots]({{$doc.img}})  
+::
+
+## Comment télécharger la formation ?
+
+::steps
+### Télécharger l'application ePoc (iOS ou Android)
+Pour les utilisateurs d'**Android**, notre application est disponible sur **Google Play**.
+::button-link{right-icon="cib:google-play" to="{{$data.google_link}}" target="_blank" class="mr-4"}
+Télécharger pour Android
+::
+
+Pour les utilisateurs d'**iPhone** et d'**iPad**, vous pouvez télécharger notre application directement depuis l'**App Store d'Apple**.
+
+::button-link{right-icon="cib:apple" to="{{$data.apple_link}}" target="_blank"}
+Télécharger pour iOS
+::
+### Cliquer sur le bouton ajouter un ePoc
+
+:read-more{to="/guide/app/import"}
+
+### Scanner le QR Code ci -dessous
+
+![QR Code import](/images/qr-E012MC.png)
+
+::
+
+::card
+#title
+Inscrivez-vous à notre Newsletter 💌
+
+#description
+Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+
+#content
+::newsletter-box
+---
+placeholder: Entrez votre email
+---
+#button
+S'abonner
+::
+::
 
 
 
