clean fr dev guide

--- a/content/guide/3.developer/1.contributing.md
+++ b/content/guide/3.developer/1.contributing.md
@@ -1,4 +1,8 @@
-# Contribuer
+---
+title: "Contribuer"
+description: "Guide pour contribuer au code source d'ePoc"
+icon: "lucide:code"
+---
 
 Bienvenue dans la communauté ePoc, une initiative open source dédiée à la création d'une solution d'apprentissage mobile libre et ouverte, ainsi qu'à l'élaboration d'un format d'édition adapté pour une éducation accessible et interactive sur les appareils mobiles. Nous sommes convaincus que l'éducation doit être accessible à tous, et notre projet vise à faciliter l'apprentissage via les téléphones portables, en particulier dans les régions où l'accès à l'éducation traditionnelle est limité.
 
