--- a/content/guide/3.developer/2.file-format.md
+++ b/content/guide/3.developer/2.file-format.md
@@ -1,9 +1,13 @@
-# Format de fichier
+---
+title: "Format de fichier"
+description: "Guide des formats de fichiers utilisés un ePoc"
+icon: "lucide:files"
+---
 
 ## Fichier `.epocproject`
 
-Le format de fichier ePoc est une archive ZIP contenenant les assets, les données et 
-metadonnées mais aussi les données de conception de l'ePoc au format JSON. 
+Le format de fichier ePoc est une archive ZIP contenenant les assets, les données et
+metadonnées mais aussi les données de conception de l'ePoc au format JSON.
 
 Ce format de fichier a été introduit par l'éditeur.
 
@@ -24,8 +28,9 @@ zip -r -X mon_ePoc.epocproject *
 ### `content.json` (`.epoc`, `.epocproject` et `.zip`)
 
 Contient les données (chapitres, pages, contenus, quizz) et métadonnées (titre, auteurs, etc)
-de l'ePoc au format JSON dans un schéma respectant les [specifications du format ePoc](data-types.md) définis
+de l'ePoc au format JSON dans un schéma respectant les specifications du format ePoc définis
 en TypeScript.
+:read-more{to="data-types" title="Format de données"}
 
 ### `project.json` (`.epocproject` seulement)
 
@@ -46,7 +51,7 @@ supportés par défaut par l'éditeur.
 
 ## Fichier de publication (export) `.epoc` ou `.zip`
 
-Le format de fichier d'export pour publication sur l'application mobile est aussi une 
+Le format de fichier d'export pour publication sur l'application mobile est aussi une
 archive ZIP contenant les assets, les données et metadonnées de l'ePoc au format JSON.
 
 Il s'agit d'un sous-ensemble du fichier `.epoc`optimisé pour sa diffusion. Tous els assets
@@ -64,4 +69,3 @@ Pour archiver le contenu dans un `.epoc`, il suffit de se placer dans le dossier
 ```bash
 zip -r -X mon_ePoc.epoc *
 ```
-
