chores: style editor guide pages

--- a/content/guide/2.user/1.install.md
+++ b/content/guide/2.user/1.install.md
@@ -19,4 +19,7 @@ Décompressez l'archive et déplacez l'application dans le dossier `Applications
 
 ### Linux
 
-Accédez au dossier où se trouve le fichier `.deb` puis installez le paquet avec la commande `sudo dpkg -i epoc-editor_vXXXX.deb`
+Accédez au dossier où se trouve le fichier `.deb` puis installez le paquet avec la commande
+```shell
+sudo dpkg -i epoc-editor_vXXXX.deb
+```
