--- a/content/guide/2.user/5.content/2.wysiwyg/1.latex.md
+++ b/content/guide/2.user/5.content/2.wysiwyg/1.latex.md
@@ -1,5 +1,5 @@
 ---
-title: "Intégration LaTex"
+title: "LaTex"
 description: "Guide pour intégrer du contenu LaTex à votre parcours de formation."
 icon: "lucide:sigma"
 ---
@@ -7,7 +7,10 @@ Dans l'éditeur WYSIWYG, vous pouvez rédiger du code LaTex. Pour l'instant l'ap
 
 ![Démo Katex](../../images/katex-demo.jpg)
 
-Vous pouvez également utiliser ce [bac à sable](https://katex.org/#demo)
+::alert{to="https://katex.org/#demo" target="_blank" icon="lucide:link"}
+Bac à sable KaTeX
+::
+<!-- Vous pouvez également utiliser ce [bac à sable](https://katex.org/#demo) -->
 
 ## Délimiteur
 Pour rédiger vos expressions, vous devez utiliser des délimiteurs au début et à la fin de votre expression. Voici les délimiteurs à utiliser :
@@ -18,15 +21,21 @@ Pour rédiger vos expressions, vous devez utiliser des délimiteurs au début et
 En résumé, le mode "display" rend les symboles plus grands, adaptés à une ligne distincte, tandis que le mode "inline" les rend plus petits, intégrés dans le texte. En mode "display", les équations sont centrées et n'ont pas de saut de ligne automatique, sauf si spécifié. En mode "inline", les sauts de ligne sont permis après certains symboles ou opérateurs.
 
 ## Exemples
-### Mode "Display"
 
-`$$ \sum_{p = 0}^{2n + 1} (-1)^p $$`
+::tabs
+    ::div{label="Mode Display"}
+    ```latex
+    $$ \sum_{p = 0}^{2n + 1} (-1)^p $$
+    ```
 
-![Katex en mode display](../../images/katex-display.png)
+    ![Katex en mode display](../../images/katex-display.png)
+    ::
 
+    ::div{label="Mode Inline"}
+    ```latex
+    $ \sum_{p = 0}^{2n + 1} (-1)^p $
+    ```
 
-### Mode "Inline"
-
-`$ \sum_{p = 0}^{2n + 1} (-1)^p $`
-
-![Katex en mode inline](../../images/katex-inline.png)
+    ![Katex en mode inline](../../images/katex-inline.png)
+    ::
+::
