--- a/content/guide/2.user/5.content/2.wysiwyg/2.mermaid.md
+++ b/content/guide/2.user/5.content/2.wysiwyg/2.mermaid.md
@@ -1,5 +1,5 @@
 ---
-title: "Intégration Mermaid"
+title: "Mermaid"
 description: "Guide pour intégrer du contenu Mermaid à votre parcours de formation."
 icon: "lucide:chart-area"
 ---
