--- a/content/guide/2.user/5.content/3.video.md
+++ b/content/guide/2.user/5.content/3.video.md
@@ -9,15 +9,30 @@ vidéo dans la barre d'outils latérale et le déposer dans la zone d'édition.
 
 Séquences vidéo enregistrées qui peuvent inclure des images, du son et des animations. Ce contenu peut être utilisé pour fournir des démonstrations, des présentations, des interviews ou des explications sur un sujet spécifique.
 
-Les informations à renseigner pour la rubrique “vidéo“ sont :
+## Informations à renseigner
+::stack
+    ::field-group{class="p-4"}
+        ::field{name="Ajouter une vidéo"}
+        Importer la vidéo dans l'éditeur ePoc en utilisant le bouton "Ajouter une vidéo".
+        ::
 
-- Ajouter une vidéo : importer la vidéo dans l'éditeur ePoc en utilisant le bouton "Ajouter une vidéo".
-- Résumé : brève description de la vidéo pour aider les utilisateurs à comprendre son contenu.
-- Transcription : si la vidéo contient un discours ou un dialogue important, vous pouvez fournir une transcription textuelle de la vidéo pour aider les utilisateurs qui ne souhaitent pas ou qui ne sont pas en capacité d'écouter la vidéo avec du son.
-- Vignette : image miniature pour la vidéo pour aider les utilisateurs à identifier la vidéo et à la sélectionner facilement.
-- Sous-titres : si la vidéo contient des dialogues ou des discours importants, vous devez fournir des sous-titres pour aider les utilisateurs qui ont des problèmes d'audition ou qui regardent la vidéo dans un environnement bruyant où le son peut être difficile à entendre.
+        ::field{name="Résumé"}
+        Brève description de la vidéo pour aider les utilisateurs à comprendre son contenu.
+        ::
 
-![Renseigner un contenu vidéo](../images/video.png)
+        ::field{name="Transcription"}
+        Si la vidéo contient un discours ou un dialogue important, vous pouvez fournir une transcription textuelle de la vidéo pour aider les utilisateurs qui ne souhaitent pas ou qui ne sont pas en capacité d'écouter la vidéo avec du son.
+        ::
+
+        ::field{name="Vignette"}
+        Image miniature pour la vidéo pour aider les utilisateurs à identifier la vidéo et à la sélectionner facilement.
+        ::
+
+        ::field{name="Sous-titres"}
+        Si la vidéo contient des dialogues ou des discours importants, vous devez fournir des sous-titres pour aider les utilisateurs qui ont des problèmes d'audition ou qui regardent la vidéo dans un environnement bruyant où le son peut être difficile à entendre.
+        ::
+    ::
+::
 
 ## Encodage des videos
 
@@ -26,6 +41,10 @@ Pour garantir une lecture optimale des vidéos sur la plupart des smartphones, n
 ### Encodage avec ffmpeg
 
 Pour encoder une ou plusieurs vidéos avec [ffmpeg](https://www.ffmpeg.org/), utilisez les commandes suivantes :
+
+::alert{to="https://www.ffmpeg.org/download.html" target="_blank" icon="lucide:link"}
+Télécharger FFmpeg
+::
 
 ```sh
 # Encodage d'une vidéo ou "video.mp4" est la vidéo d'origine et "video-min.mp4" est la vidéo compressée
@@ -39,12 +58,19 @@ done
 
 ### Encodage avec Handbrake
 
-Si vous préférez utiliser un logiciel graphique nous vous recommandons [HandBrake](https://handbrake.fr/rotation.php?file=HandBrake-1.9.0.dmg). Pour ce faire, suivez ces étapes :
+Si vous préférez utiliser un logiciel graphique nous vous recommandons [HandBrake](https://handbrake.fr). Pour ce faire, suivez ces étapes :
 
-1. Ouvrez HandBrake et chargez votre fichier vidéo.
-2. Sélectionnez le préréglage "HQ 480p30".
-3. Assurez-vous que le format de sortie est MP4 et que le codec vidéo est H.264.
-4. Choisissez un emplacement et un nom de sortie pour la vidéo
-5. Cliquez sur "Démarrer" pour commencer l'encodage.
+::alert{to="https://handbrake.fr/downloads.php" target="_blank" icon="lucide:link"}
+Télécharger HandBrake
+::
+
+
+::steps{level=5}
+##### Ouvrez HandBrake et chargez votre fichier vidéo
+##### Sélectionnez le préréglage "HQ 480p30"
+##### Assurez-vous que le format de sortie est MP4 et que le codec vidéo est H.264.
+##### Choisissez un emplacement et un nom de sortie pour la vidéo
+##### Cliquez sur "Démarrer" pour commencer l'encodage.
+::
 
 Ces recommandations garantissent une compatibilité maximale et une qualité optimale pour la lecture sur divers appareils.
