--- a/content/guide/2.user/5.content/4.audio.md
+++ b/content/guide/2.user/5.content/4.audio.md
@@ -11,11 +11,21 @@ Séquences audio enregistrées qui peuvent inclure de la musique, des podcasts o
 
 Les informations à renseigner pour la rubrique “audio“ sont :
 
-- Ajouter un audio : importer le fichier audio dans l'éditeur ePoc en utilisant le bouton "Ajouter une audio".
-- Résumé : brève description de l'audio pour aider les utilisateurs à comprendre son contenu.
-- Transcription : si l'audio contient un discours ou un dialogue important, vous pouvez fournir une transcription textuelle de l'audio pour aider les utilisateurs qui ne souhaite pas ou qui ne sont pas en capacité d'écouter l'audio.
+::stack
+    ::field-group{class="p-4"}
+        ::field{name="Ajouter un audio" type="mp3"}
+        Importer le fichier audio dans l'éditeur ePoc en utilisant le bouton "Ajouter une audio".
+        ::
 
-![Renseigner un contenu audio](../images/audio.png)
+       ::field{name="Résumé" type="text"}
+       Brève description de l'audio pour aider les utilisateurs à comprendre son contenu.
+       ::
+
+       ::field{name="Transcription" type="text"}
+        Si l'audio contient un discours ou un dialogue important, vous pouvez fournir une transcription textuelle de l'audio pour aider les utilisateurs qui ne souhaite pas ou qui ne sont pas en capacité d'écouter l'audio.
+       ::
+    ::
+::
 
 ### Encodage des fichiers audio
 
@@ -33,9 +43,11 @@ ffmpeg -i input.wav -codec\:a libmp3lame -b\:a 128k output.mp3
 
 Si vous préférez utiliser [Audacity](https://www.audacityteam.org/), suivez ces étapes :
 
-1. Ouvrez Audacity et chargez votre fichier audio.
-2. Allez dans "Fichier" > "Exporter" > "Exporter en MP3".
-3. Dans la fenêtre d'exportation, sélectionnez "128 kbps" comme débit binaire.
-4. Cliquez sur "Enregistrer" pour commencer l'encodage.
+::steps{level=5}
+##### Ouvrez Audacity et chargez votre fichier audio.
+##### Allez dans "Fichier" > "Exporter" > "Exporter en MP3".
+##### Dans la fenêtre d'exportation, sélectionnez "128 kbps" comme débit binaire.
+##### Cliquez sur "Enregistrer" pour commencer l'encodage.
+::
 
 Ces recommandations garantissent une compatibilité maximale et une qualité audio optimale pour la lecture sur divers appareils.
