translate: all pages excluding guides

--- a/content/en/epocs/E001DB.md
+++ b/content/en/epocs/E001DB.md
@@ -1,7 +1,7 @@
 ---
-title: Zone à Régime Restrictif
-description: Formation ePoc des nouveaux arrivants Inria en Zone à Régime Restrictif.
-short: Formation ePoc des nouveaux arrivants Inria en Zone à Régime Restrictif.
+title: Restricted Zone
+description: ePoc training for new Inria arrivals in Restricted Zones.
+short: ePoc training for new Inria arrivals in Restricted Zones.
 img: /images/accueil-zrr.png
 thumb: /images/thumb-zrr.png
 private: true
@@ -13,12 +13,12 @@ fullpage: true
 ::hero-alt
 ---
 actions:
-- name: Découvrir sur Android
+- name: Discover on Android
   to: {{$data.google_link}}
   leftIcon: 'cib:google-play'
   rightIcon: 'lucide:arrow-up-right'
   target: _blank
-- name: Découvrir sur iOS
+- name: Discover on iOS
   to: {{$data.apple_link}}
   leftIcon: 'cib:apple'
   rightIcon: 'lucide:arrow-up-right'
@@ -37,18 +37,18 @@ actions:
 
 ::card
 #title
-Inscrivez-vous à notre Newsletter 💌
+Subscribe to our Newsletter 💌
 
 #description
-Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+To receive news about the application, editor, and ePoc trainings.
 
 #content
 ::newsletter-box
 ---
-placeholder: Entrez votre email
+placeholder: Enter your email
 ---
 #button
-S'abonner
+Subscribe
 ::
 ::
 
