--- a/content/en/epocs/E002VR.md
+++ b/content/en/epocs/E002VR.md
@@ -1,7 +1,7 @@
 ---
-title: Smartphone et vie privée
-description: Formation ePoc dédiée à la question du respect de la vie privée lorsque l'on utilise nos assistants personnels, smartphone ou tablette.
-short: A propos du respect de la vie privée sur nos smartphone ou tablette.
+title: Smartphone and Privacy
+description: ePoc training dedicated to the question of privacy protection when using our personal assistants, smartphones or tablets.
+short: About privacy protection on our smartphones or tablets.
 img: /images/accueil-vp.png
 thumb: /images/thumb-vp.png
 fullpage: true
@@ -10,12 +10,12 @@ fullpage: true
 ::hero-alt
 ---
 actions:
-- name: Découvrir sur Android
+- name: Discover on Android
   to: {{$data.google_link}}
   leftIcon: 'cib:google-play'
   rightIcon: 'lucide:arrow-up-right'
   target: _blank
-- name: Découvrir sur iOS
+- name: Discover on iOS
   to: {{$data.apple_link}}
   leftIcon: 'cib:apple'
   rightIcon: 'lucide:arrow-up-right'
@@ -34,18 +34,18 @@ actions:
 
 ::card
 #title
-Inscrivez-vous à notre Newsletter 💌
+Subscribe to our Newsletter 💌
 
 #description
-Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+To receive news about the application, editor, and ePoc trainings.
 
 #content
 ::newsletter-box
 ---
-placeholder: Entrez votre email
+placeholder: Enter your email
 ---
 #button
-S'abonner
+Subscribe
 ::
 ::
 
