--- a/content/en/epocs/E007MM.md
+++ b/content/en/epocs/E007MM.md
@@ -1,7 +1,7 @@
 ---
-title: Le smartphone et la planète
-description: Une formation courte sur mobile pour comprendre les impacts environnementaux du smartphone.
-short: Comprendre les impacts environnementaux du smartphone.
+title: Smartphones and the Planet
+description: A short mobile training to understand the environmental impacts of smartphones.
+short: Understand the environmental impacts of smartphones.
 img: /images/accueil-impactnum.png
 thumb: /images/thumb-impactnum.png
 fullpage: true
@@ -10,12 +10,12 @@ fullpage: true
 ::hero-alt
 ---
 actions:
-- name: Découvrir sur Android
+- name: Discover on Android
   to: {{$data.google_link}}
   leftIcon: 'cib:google-play'
   rightIcon: 'lucide:arrow-up-right'
   target: _blank
-- name: Découvrir sur iOS
+- name: Discover on iOS
   to: {{$data.apple_link}}
   leftIcon: 'cib:apple'
   rightIcon: 'lucide:arrow-up-right'
@@ -34,18 +34,18 @@ actions:
 
 ::card
 #title
-Inscrivez-vous à notre Newsletter 💌
+Subscribe to our Newsletter 💌
 
 #description
-Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+To receive news about the application, editor, and ePoc trainings.
 
 #content
 ::newsletter-box
 ---
-placeholder: Entrez votre email
+placeholder: Enter your email
 ---
 #button
-S'abonner
+Subscribe
 ::
 ::
 
