--- a/content/en/epocs/E009LL.md
+++ b/content/en/epocs/E009LL.md
@@ -1,7 +1,7 @@
 ---
-title: "C'est quoi l'IA ?"
-description: "Ce parcours découverte s'adresse à toutes celles et tous ceux qui souhaitent comprendre les principes de l'intelligence artificielle (IA) par rapport à l'intelligence biologique, où trouve-t-on de l'IA et ses principales approches."
-short: "Les principes de l'intelligence artificielle (IA) par rapport à l'intelligence biologique"
+title: "What is AI?"
+description: "This discovery course is for anyone who wants to understand the principles of artificial intelligence (AI) compared to biological intelligence, where to find AI and its main approaches."
+short: "The principles of artificial intelligence (AI) compared to biological intelligence"
 img: /images/accueil-ia.png
 thumb: /images/thumb-ia.png
 fullpage: true
@@ -10,12 +10,12 @@ fullpage: true
 ::hero-alt
 ---
 actions:
-- name: Découvrir sur Android
+- name: Discover on Android
   to: {{$data.google_link}}
   leftIcon: 'cib:google-play'
   rightIcon: 'lucide:arrow-up-right'
   target: _blank
-- name: Découvrir sur iOS
+- name: Discover on iOS
   to: {{$data.apple_link}}
   leftIcon: 'cib:apple'
   rightIcon: 'lucide:arrow-up-right'
@@ -34,18 +34,18 @@ actions:
 
 ::card
 #title
-Inscrivez-vous à notre Newsletter 💌
+Subscribe to our Newsletter 💌
 
 #description
-Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+To receive news about the application, editor, and ePoc trainings.
 
 #content
 ::newsletter-box
 ---
-placeholder: Entrez votre email
+placeholder: Enter your email
 ---
 #button
-S'abonner
+Subscribe
 ::
 ::
 
