--- a/content/en/epocs/E012MC.md
+++ b/content/en/epocs/E012MC.md
@@ -1,7 +1,7 @@
 ---
-title: "Produire mon 1er ePoc"
-description: "Découvrez l'éditeur \"ePoc Editor\" et créez votre première formation mobile learning, courte, ludique, en quelques clics. "
-short: "Découvrez comment créer votre première formation mobile learning, courte, ludique, en quelques clics."
+title: "Create My First ePoc"
+description: "Discover the \"ePoc Editor\" and create your first mobile learning training, short, engaging, in just a few clicks."
+short: "Discover how to create your first mobile learning training, short, engaging, in just a few clicks."
 img: /images/accueil-E012MC.png
 thumb: /images/thumb-E012MC.png
 qrcode: /images/qr-E012MC.png
@@ -11,12 +11,12 @@ fullpage: true
 ::hero-alt
 ---
 actions:
-- name: Découvrir sur Android
+- name: Discover on Android
   to: {{$data.google_link}}
   leftIcon: 'cib:google-play'
   rightIcon: 'lucide:arrow-up-right'
   target: _blank
-- name: Découvrir sur iOS
+- name: Discover on iOS
   to: {{$data.apple_link}}
   leftIcon: 'cib:apple'
   rightIcon: 'lucide:arrow-up-right'
@@ -30,28 +30,29 @@ actions:
 {{$doc.description}}
 
 #right
-![ePoc Mobile App screenshots]({{$doc.img}})  
+![ePoc Mobile App screenshots]({{$doc.img}})
 ::
 
-## Comment télécharger la formation ?
+## How to download the training?
 
 ::steps
-### Télécharger l'application ePoc (iOS ou Android)
-Pour les utilisateurs d'**Android**, notre application est disponible sur **Google Play**.
+### Download the ePoc app (iOS or Android)
+For **Android** users, our app is available on **Google Play**.
 ::button-link{right-icon="cib:google-play" to="{{$data.google_link}}" target="_blank" class="mr-4"}
-Télécharger pour Android
+Download for Android
 ::
 
-Pour les utilisateurs d'**iPhone** et d'**iPad**, vous pouvez télécharger notre application directement depuis l'**App Store d'Apple**.
-
+For **iPhone** and **iPad** users, you can download our app directly from the **Apple App Store**.
 ::button-link{right-icon="cib:apple" to="{{$data.apple_link}}" target="_blank"}
-Télécharger pour iOS
+Download for iOS
 ::
-### Cliquer sur le bouton ajouter un ePoc
 
+### Click the "Add an ePoc" button
 :read-more{to="/guide/app/import"}
 
-### Scanner le QR Code ci -dessous
+To receive news about the application, editor, and ePoc trainings.
+
+### Scan the QR Code below
 
 ![QR Code import](/images/qr-E012MC.png)
 
@@ -59,21 +60,17 @@ Télécharger pour iOS
 
 ::card
 #title
-Inscrivez-vous à notre Newsletter 💌
+Subscribe to our Newsletter 💌
 
 #description
-Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+To receive news about the application, editor, and ePoc trainings.
 
 #content
 ::newsletter-box
 ---
-placeholder: Entrez votre email
+placeholder: Enter your email
 ---
 #button
-S'abonner
+Subscribe
 ::
 ::
-
-
-
-
