--- a/content/en/epocs/E003VR.md
+++ b/content/en/epocs/E003VR.md
@@ -1,7 +1,7 @@
 ---
-title: Internet des objets et vie privée
-description: Formation ePoc dédiée à la question du respect de la vie privée dans le domaine de la maison intelligente.
-short: Sur la question de la vie privée dans le domaine de la maison intelligente.
+title: Internet of Things and Privacy
+description: ePoc training dedicated to the question of privacy protection in the smart home domain.
+short: About privacy in the smart home domain.
 img: /images/accueil-iot.png
 thumb: /images/thumb-iot.png
 fullpage: true
@@ -10,12 +10,12 @@ fullpage: true
 ::hero-alt
 ---
 actions:
-- name: Découvrir sur Android
+- name: Discover on Android
   to: {{$data.google_link}}
   leftIcon: 'cib:google-play'
   rightIcon: 'lucide:arrow-up-right'
   target: _blank
-- name: Découvrir sur iOS
+- name: Discover on iOS
   to: {{$data.apple_link}}
   leftIcon: 'cib:apple'
   rightIcon: 'lucide:arrow-up-right'
@@ -34,18 +34,18 @@ actions:
 
 ::card
 #title
-Inscrivez-vous à notre Newsletter 💌
+Subscribe to our Newsletter 💌
 
 #description
-Pour recevoir les actualités à propos de l'application, de l'éditeur et des formations ePoc.
+To receive news about the application, editor, and ePoc trainings.
 
 #content
 ::newsletter-box
 ---
-placeholder: Entrez votre email
+placeholder: Enter your email
 ---
 #button
-S'abonner
+Subscribe
 ::
 ::
 
