--- a/content/en/guide/2.user/8.export-and-publish/3.google-drive.md
+++ b/content/en/guide/2.user/8.export-and-publish/3.google-drive.md
@@ -7,7 +7,7 @@ icon: lucide:hard-drive-download
 ### Déposer votre ePoc dans votre espace (100MB max sinon Google Drive affiche un avertissement qui bloque le téléchargement direct)
 ### Récupérer le lien de partage
 ![Copy share link Google Drive](images/share-googledrive.png)
-### Utiliser [notre outil](../../qr-code-generator/index.md) pour convertir ce lien en QR Code
+### Utiliser [notre outil](/en/tools/qr-code-generator) pour convertir ce lien en QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
 Notre outil de génération de QR Code
 ::
