--- a/content/en/guide/2.user/8.export-and-publish/4.github.md
+++ b/content/en/guide/2.user/8.export-and-publish/4.github.md
@@ -7,7 +7,7 @@ icon: lucide:github
 ### Déposer votre ePoc dans votre dépôt (25MB max, le dépôt doit être *public*)
 ### Copier le lien vers le fichier
 ![Copy share link Github](images/share-github.png)
-### Utiliser [notre outil](../../qr-code-generator/index.md) pour convertir ce lien en QR Code
+### Utiliser [notre outil](/en/tools/qr-code-generator) pour convertir ce lien en QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
 Notre outil de génération de QR Code
 ::
