--- a/content/en/guide/2.user/8.export-and-publish/5.dropbox.md
+++ b/content/en/guide/2.user/8.export-and-publish/5.dropbox.md
@@ -6,7 +6,7 @@ icon: lucide:package-open
 ::steps
 ### Déposer votre ePoc dans votre espace
 ### Récupérer le lien de partage
-### Utiliser [notre outil](../../qr-code-generator/index.md) pour convertir ce lien en QR Code
+### Utiliser [notre outil](/en/tools/qr-code-generator) pour convertir ce lien en QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
 Notre outil de génération de QR Code
 ::
