--- a/content/guide/2.user/5.content/2.wysiwyg/1.latex.md
+++ b/content/guide/2.user/5.content/2.wysiwyg/1.latex.md
@@ -5,7 +5,7 @@ icon: "lucide:sigma"
 ---
 Dans l'éditeur WYSIWYG, vous pouvez rédiger du code LaTex. Pour l'instant l'aperçu du LaTex n'est pas disponible dans l'éditeur, mais vous pouvez visualiser le résultat sur l'application mobile. Pour obtenir un aperçu de votre cours tout en rédigeant vos expressions LaTex, vous pouvez lancer l'aperçu en simultané avec l'éditeur.
 
-![Démo Katex](../../images/katex-demo.jpg)
+![Démo Katex](/images/katex-demo.jpg)
 
 ::alert{to="https://katex.org/#demo" target="_blank" icon="lucide:link"}
 Bac à sable KaTeX
@@ -28,7 +28,7 @@ En résumé, le mode "display" rend les symboles plus grands, adaptés à une li
     $$ \sum_{p = 0}^{2n + 1} (-1)^p $$
     ```
 
-    ![Katex en mode display](../../images/katex-display.png)
+    ![Katex en mode display](/images/katex-display.png)
     ::
 
     ::div{label="Mode Inline"}
@@ -36,6 +36,6 @@ En résumé, le mode "display" rend les symboles plus grands, adaptés à une li
     $ \sum_{p = 0}^{2n + 1} (-1)^p $
     ```
 
-    ![Katex en mode inline](../../images/katex-inline.png)
+    ![Katex en mode inline](/images/katex-inline.png)
     ::
 ::
