--- a/content/guide/2.user/8.export-and-publish/1.index.md
+++ b/content/guide/2.user/8.export-and-publish/1.index.md
@@ -25,7 +25,7 @@ Pour cela rien de plus simple :
 Afin de pouvoir consulter votre nouvel ePoc dans l'application mobile, vous devez l'héberger sur un service accessible
 depuis internet (Nuage, Nextcloud, Google Drive, Dropbox, Github, etc).
 
-Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](../../qr-code-generator/index.md) en ligne pour l'importer depuis votre application mobile.
+Une fois celui-ci déposer vous pouvez générer un QR Code avec [notre outil](/tools/qr-code-generator) en ligne pour l'importer depuis votre application mobile.
 
 ::card-group
     ::card
