--- a/content/guide/2.user/8.export-and-publish/2.nuage.md
+++ b/content/guide/2.user/8.export-and-publish/2.nuage.md
@@ -13,7 +13,7 @@ Exemple : `https://demo1.nextcloud.com/s/5Xs6DX9HWKKrNpW`
 Devient : `https://demo1.nextcloud.com/s/5Xs6DX9HWKKrNpW/download`
 
 ![Copy share link Nextcloud](images/share-nextcloud.png)
-### Utiliser [notre outil](../../qr-code-generator/index.md) pour convertir ce lien en QR Code
+### Utiliser [notre outil](/tools/qr-code-generator) pour convertir ce lien en QR Code
 ::alert{icon="lucide:link" to="https://epoc.inria.fr/qr-code-generator/"}
 Notre outil de génération de QR Code
 ::
