Fix filenames and gif too big

--- a/content/guide/2.user/2.getting-started.md
+++ b/content/guide/2.user/2.getting-started.md
@@ -113,5 +113,5 @@ Conçue comme un accompagnement structuré et ludique, l'apprenant est guidé pa
 ### Informations pratiques
 
 - Télécharger [ePoc Editor](/editor/) sur votre ordinateur (MacOS, Windows, Linux),
-- Suivre les modules de l'ePoc "[Produire mon 1er ePoc](/epocs/E012MC)" sur votre téléphone mobile tout en expérimentant les fonctionnalités présentées.
+- Suivre les modules de l'ePoc "[Produire mon 1er ePoc](/epocs/e012mc)" sur votre téléphone mobile tout en expérimentant les fonctionnalités présentées.
 - Durée de l'apprentissage : 40 min (10 min par module)
